--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mazelo</title>
+    <!-- <meta name="description" content="A brief description of the webpage content.">
+    <meta name="keywords" content="keyword1, keyword2, keyword3">
+    <meta name="author" content="Your Name or Company Name"> -->
+
+    <title>AllyValley</title>
+    
+    <!-- Open Graph Meta Tags -->
+    <!-- <meta property="og:title" content="Your Webpage Title">
+    <meta property="og:description" content="A brief description of the webpage content.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.yourwebsite.com/your-page">
+    <meta property="og:image" content="https://www.yourwebsite.com/images/your-image.jpg">
+    <meta property="og:site_name" content="Your Website Name"> -->
+
+    <!-- Twitter Card Meta Tags -->
+    <!-- <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Your Webpage Title">
+    <meta name="twitter:description" content="A brief description of the webpage content.">
+    <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg"> -->
+
+    <!-- Favicon -->
+    <!-- <link rel="icon" href="/path/to/favicon.ico" type="image/x-icon"> -->
   </head>
   <body>
     <div id="root"></div>
