--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <!-- Favicon -->
     <!-- <link rel="icon" href="/path/to/favicon.ico" type="image/x-icon"> -->
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S3W1KBMLJ6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-S3W1KBMLJ6');
+  </script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
