--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta name="description" content="A brief description of the webpage content.">
-    <meta name="keywords" content="keyword1, keyword2, keyword3">
-    <meta name="author" content="Your Name or Company Name"> -->
+    <meta name="google-site-verification" content="aLs65T49PoG0w-yEad-I0GPuVitZjdUZ4ACWY6kxFg0" />
+    <meta name="description" content="A random video call platform which randomly connects you with people of your organisation/college.">
+    <meta name="keywords" content="video call, Ometv, random, omegle, college, university, organisation, ">
+    <meta name="author" content="Chirag | Sourav">
 
-    <title>AllyValley</title>
+    <title>Mazelo | Random Video Call</title>
     
     <!-- Open Graph Meta Tags -->
-    <!-- <meta property="og:title" content="Your Webpage Title">
-    <meta property="og:description" content="A brief description of the webpage content.">
+     <meta property="og:title" content="Mazelo | Connect Randomly with your Batchmates">
+    <meta property="og:description" content="A random video call platform which randomly connects you with people of your organisation.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.yourwebsite.com/your-page">
-    <meta property="og:image" content="https://www.yourwebsite.com/images/your-image.jpg">
-    <meta property="og:site_name" content="Your Website Name"> -->
+    <meta property="og:url" content="https://mazelo.gitroaster.tech">
+    <!-- <meta property="og:image" content="https://"> -->
+    <meta property="og:site_name" content="Mazelo">
 
     <!-- Twitter Card Meta Tags -->
-    <!-- <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Your Webpage Title">
-    <meta name="twitter:description" content="A brief description of the webpage content.">
-    <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg"> -->
+    <!-- <meta name="twitter:card" content="summary_large_image"> -->
+    <meta name="twitter:title" content="Mazelo | Connect Randomly with your Batchmates">
+    <meta name="twitter:description" content="A random video call platform which randomly connects you with people of your organisation.">
+    <!-- <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg"> -->
 
     <!-- Favicon -->
     <!-- <link rel="icon" href="/path/to/favicon.ico" type="image/x-icon"> -->
