--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="aLs65T49PoG0w-yEad-I0GPuVitZjdUZ4ACWY6kxFg0" />
     <meta name="description" content="A random video call platform which randomly connects you with people of your organisation/college.">
-    <meta name="keywords" content="video call, Ometv, random, omegle, college, university, organisation, ">
+    <meta name="keywords" content="video call, Ometv, random, omegle, college, university, organisation, omegle alternatives, ymca, dtu ,omegle me, omegle tv, new omegle, junior interaction, senior interaction, interaction, social connect ">
     <meta name="author" content="Chirag | Sourav">
 
-    <title>Mazelo | Random Video Call</title>
+    <title>BingeChat | Chat with Random People</title>
     
     <!-- Open Graph Meta Tags -->
-     <meta property="og:title" content="Mazelo | Connect Randomly with your Batchmates">
+     <meta property="og:title" content="BingeChat | Connect with Random People">
     <meta property="og:description" content="A random video call platform which randomly connects you with people of your organisation.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mazelo.gitroaster.tech">
     <!-- <meta property="og:image" content="https://"> -->
-    <meta property="og:site_name" content="Mazelo">
+    <meta property="og:site_name" content="BingeChat">
 
     <!-- Twitter Card Meta Tags -->
     <!-- <meta name="twitter:card" content="summary_large_image"> -->
-    <meta name="twitter:title" content="Mazelo | Connect Randomly with your Batchmates">
+    <meta name="twitter:title" content="BingeChat | Connect with Random People">
     <meta name="twitter:description" content="A random video call platform which randomly connects you with people of your organisation.">
     <!-- <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg"> -->
 
