added logo, favicon

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
      <meta property="og:title" content="BingeChat | Connect with Random People">
     <meta property="og:description" content="A random video call platform which randomly connects you with people of your organisation.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mazelo.gitroaster.tech">
-    <!-- <meta property="og:image" content="https://"> -->
+    <meta property="og:url" content="https://www.bingechat.live">
+    <meta property="og:image" content="https://www.bingechat.live/assets/logo.png">
     <meta property="og:site_name" content="BingeChat">
 
     <!-- Twitter Card Meta Tags -->
@@ -25,7 +25,7 @@
     <!-- <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg"> -->
 
     <!-- Favicon -->
-    <!-- <link rel="icon" href="/path/to/favicon.ico" type="image/x-icon"> -->
+    <link rel="icon" href="./assets/logo.png" type="image/x-icon">
   </head>
   <!-- Google tag (gtag.js) -->
   <body>
