Add image to meta tags

--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
     <meta name="author" content="Chirag | Sourav">
 
     <title>BingeChat | Chat with Random People</title>
-    
-    <!-- Open Graph Meta Tags -->
-     <meta property="og:title" content="BingeChat | Connect with Random People">
-    <meta property="og:description" content="A random video call platform which randomly connects you with people of your organisation.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.bingechat.live">
-    <meta property="og:image" content="https://www.bingechat.live/assets/logo.png">
-    <meta property="og:site_name" content="BingeChat">
+    <!-- Primary Meta Tags -->
+    <title>BingeChat | Chat with Random People</title>
+    <meta name="title" content="BingeChat | Chat with Random People" />
+    <meta name="description" content="A random video call platform which randomly connects you with people of your organisation/college." />
 
-    <!-- Twitter Card Meta Tags -->
-    <!-- <meta name="twitter:card" content="summary_large_image"> -->
-    <meta name="twitter:title" content="BingeChat | Connect with Random People">
-    <meta name="twitter:description" content="A random video call platform which randomly connects you with people of your organisation.">
-    <!-- <meta name="twitter:image" content="https://www.yourwebsite.com/images/your-image.jpg"> -->
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.bingechat.live/" />
+    <meta property="og:title" content="BingeChat | Chat with Random People" />
+    <meta property="og:description" content="A random video call platform which randomly connects you with people of your organisation/college." />
+    <meta property="og:image" content="https://raw.githubusercontent.com/chirag-unision/coresmashers/main/banner.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.bingechat.live/" />
+    <meta property="twitter:title" content="BingeChat | Chat with Random People" />
+    <meta property="twitter:description" content="A random video call platform which randomly connects you with people of your organisation/college." />
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/chirag-unision/coresmashers/main/banner.png" />
 
     <!-- Favicon -->
-    <link rel="icon" href="./assets/logo.png" type="image/x-icon">
+    <link rel="icon" href="./assets/logo-tp.png" type="image/x-icon">
   </head>
   <!-- Google tag (gtag.js) -->
   <body>
